--- a/app/index.html
+++ b/app/index.html
@@ -805,7 +805,7 @@
                     <div class="martplace__number">01</div>
                     <div class="martplace__photo"><img src="img/license.png" alt=""></div>
                     <h3>One Time Payment</h3>
-                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.</p>
                 </div>
@@ -813,7 +813,7 @@
                     <div class="martplace__number">02</div>
                     <div class="martplace__photo"><img src="img/magic-wand.png" alt=""></div>
                     <h3>Quality Products</h3>
-                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.</p>
                 </div>
@@ -821,7 +821,7 @@
                     <div class="martplace__number">03</div>
                     <div class="martplace__photo"><img src="img/lock.png" alt=""></div>
                     <h3>100% Secure Payment</h3>
-                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.</p>
                 </div>
@@ -829,7 +829,7 @@
                     <div class="martplace__number">04</div>
                     <div class="martplace__photo"><img src="img/chart-bars.png" alt=""></div>
                     <h3>Well Organized Code</h3>
-                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.</p>
                 </div>
@@ -837,7 +837,7 @@
                     <div class="martplace__number">05</div>
                     <div class="martplace__photo"><img src="img/leaf.png" alt=""></div>
                     <h3>Life Time Free Update</h3>
-                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.</p>
                 </div>
@@ -845,7 +845,7 @@
                     <div class="martplace__number">06</div>
                     <div class="martplace__photo"><img src="img/phone.png" alt=""></div>
                     <h3>Fast and Friendly Support</h3>
-                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.</p>
                 </div>
@@ -854,27 +854,87 @@
     </section>
     <section class="become">
         <!-- <div class="container"> -->
-            <div class="become__inner">
-                <div class="become__left-content">
-                    <div class="become__photo">
-                        <img src="img/Icon2.png" alt="">
-                    </div>
-                    <h3>Sell Your Products</h3>
-                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
-                        the mattis, leo quam aliquet diamcongue is laoreet elit metus.</p>
-                    <div class="become__btn"><button>Become an Author</button></div>
+        <div class="become__inner">
+            <div class="become__left-content">
+                <div class="become__photo">
+                    <img src="img/Icon2.png" alt="">
                 </div>
-                <div class="become__right-content">
-                    <div class="become__photo">
-                        <img src="img/Icon.png" alt="">
+                <h3>Sell Your Products</h3>
+                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                    the mattis, leo quam aliquet diamcongue is laoreet elit metus.</p>
+                <div class="become__btn"><button>Become an Author</button></div>
+            </div>
+            <div class="become__right-content">
+                <div class="become__photo">
+                    <img src="img/Icon.png" alt="">
+                </div>
+                <h3>Start Shopping Today</h3>
+                <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                    the mattis, leo quam aliquet diamcongue is laoreet elit metus.</p>
+                <div class="become__btn"><button>Start Shopping</button></div>
+            </div>
+        </div>
+        <!-- </div> -->
+    </section>
+    <section class="feedback">
+        <div class="container">
+            <div class="feedback__title">
+                <h2>Our Clients <span> Feedback </span></h2>
+            </div>
+            <div class="feedback__title-discr">
+                <p>Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid
+                    est laborum dolo rumes fugats untras.</p>
+            </div>
+            <div class="feedback__inner">
+                <div class="feedback__inner-item">
+                    <div class="item__top-info">
+                        <div class="user-feedback-info">
+                            <div class="item__photo">
+                                <img src="img/Img-feedback.png" alt="">
+                                
+                            </div>
+                            <div class="item__photo-discr">
+                                <div class="item__nick">Taofiqul Hakim</div>
+                                <div class="item__job">Product Designer</div>
+                            </div>
+                        </div>
+                        <div class="item__photo-mes">
+                            <img src="img/bubble.png" alt="">
+                        </div>
                     </div>
-                    <h3>Start Shopping Today</h3>
-                    <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
-                        the mattis, leo quam aliquet diamcongue is laoreet elit metus.</p>
-                    <div class="become__btn"><button>Start Shopping</button></div>
+                    <div class="item__bot-info">
+                        <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis,
+                            leo quam aliquet diam congue is the laoreet elit metus. Nunc placerat mi is id nisi interdum
+                            is mollis. Praesent the pharetra, justo ut scelerisque.</p>
+                    </div>
+                </div>
+                <div class="feedback__inner-item">
+                    <div class="item__top-info">
+                        <div class="user-feedback-info">
+                            <div class="item__photo">
+                                <img src="img/Img-feedback.png" alt="">
+                                
+                            </div>
+                            <div class="item__photo-discr">
+                                <div class="item__nick">Taofiqul Hakim</div>
+                                <div class="item__job">Product Designer</div>
+                            </div>
+                        </div>
+                        <div class="item__photo-mes">
+                            <img src="img/bubble.png" alt="">
+                        </div>
+                    </div>
+                    <div class="item__bot-info">
+                        <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis,
+                            leo quam aliquet diam congue is the laoreet elit metus. Nunc placerat mi is id nisi interdum
+                            is mollis. Praesent the pharetra, justo ut scelerisque.</p>
+                    </div>
                 </div>
             </div>
-        <!-- </div> -->
+            <div class="feedback-btn">
+                <button>View All Reviews</button>
+            </div>
+        </div>
     </section>
 
 
