--- a/app/index.html
+++ b/app/index.html
@@ -891,7 +891,7 @@
                         <div class="user-feedback-info">
                             <div class="item__photo">
                                 <img src="img/Img-feedback.png" alt="">
-                                
+
                             </div>
                             <div class="item__photo-discr">
                                 <div class="item__nick">Taofiqul Hakim</div>
@@ -913,7 +913,7 @@
                         <div class="user-feedback-info">
                             <div class="item__photo">
                                 <img src="img/Img-feedback.png" alt="">
-                                
+
                             </div>
                             <div class="item__photo-discr">
                                 <div class="item__nick">Taofiqul Hakim</div>
@@ -933,6 +933,91 @@
             </div>
             <div class="feedback-btn">
                 <button>View All Reviews</button>
+            </div>
+        </div>
+    </section>
+    <section class="news">
+        <div class="container">
+            <div class="news__title">
+                <h2>Latest <span> News </span></h2>
+            </div>
+            <div class="news__title-discr">
+                <p>Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid
+                    est laborum dolo rumes fugats untras.</p>
+            </div>
+            <div class="news__inner">
+                <div class="news__inner-item">
+                    <div class="news-item-img">
+                        <img src="img/BG copy-news.png" alt="">
+                    </div>
+                    <div class="news__item-inner">
+                        <h3>Web Design Trends in 2017</h3>
+                        <div class="item__discr">
+                            <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.</p>
+                        </div>
+                        <div class="news__item-down-content">
+                            <div class="news__left-content">
+                                <img src="img/clock.png" alt="" class="alarm">
+                                <span class="alarm__span">24 Feb 2017</span>
+                            </div>
+                            <div class="news__right-content">
+                                <img src="img/comment.png" alt="" class="commentary">
+                                <span class="coment__span">45</span>
+                                <img src="img/eye.png" alt="" class="eye">
+                                <span class="eye__span">345</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="news__inner-item">
+                    <div class="news-item-img">
+                        <img src="img/BG copy-news.png" alt="">
+                    </div>
+                    <div class="news__item-inner">
+                        <h3>Web Design Trends in 2017</h3>
+                        <div class="item__discr">
+                            <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.</p>
+                        </div>
+                        <div class="news__item-down-content">
+                            <div class="news__left-content">
+                                <img src="img/clock.png" alt="" class="alarm">
+                                <span class="alarm__span">24 Feb 2017</span>
+                            </div>
+                            <div class="news__right-content">
+                                <img src="img/comment.png" alt="" class="commentary">
+                                <span class="coment__span">45</span>
+                                <img src="img/eye.png" alt="" class="eye">
+                                <span class="eye__span">345</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="news__inner-item">
+                    <div class="news-item-img">
+                        <img src="img/BG copy-news.png" alt="">
+                    </div>
+                    <div class="news__item-inner">
+                        <h3>Web Design Trends in 2017</h3>
+                        <div class="item__discr">
+                            <p>Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.</p>
+                        </div>
+                        <div class="news__item-down-content">
+                            <div class="news__left-content">
+                                <img src="img/clock.png" alt="" class="alarm">
+                                <span class="alarm__span">24 Feb 2017</span>
+                            </div>
+                            <div class="news__right-content">
+                                <img src="img/comment.png" alt="" class="commentary">
+                                <span class="coment__span">45</span>
+                                <img src="img/eye.png" alt="" class="eye">
+                                <span class="eye__span">345</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
