--- a/app/index.html
+++ b/app/index.html
@@ -1021,6 +1021,29 @@
             </div>
         </div>
     </section>
+    <section class="garante">
+        <div class="container">
+            <div class="garante__inner">
+                <div class="garante__inner-item first-item">
+                    <img src="img/cash.png" alt="">
+                    <h3>30 Days Money Back <span> Guarantee </span></h3>
+                </div>
+                <div class="garante__inner-item">
+                    <img src="img/computer-men.png" alt="">
+                    <h3>Fast and Friendly <span> Support </span></h3>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="join">
+        <div class="container">
+            <div class="join__inner">
+            <h2>Ready to Join Our Marketplace!</h2>
+            <p>Over 25,000 designers and developers trust the MartPlace.</p>
+            <button>Join Us Today</button>
+        </div>
+        </div>
+    </section>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
