--- a/app/index.html
+++ b/app/index.html
@@ -1038,12 +1038,78 @@
     <section class="join">
         <div class="container">
             <div class="join__inner">
-            <h2>Ready to Join Our Marketplace!</h2>
-            <p>Over 25,000 designers and developers trust the MartPlace.</p>
-            <button>Join Us Today</button>
-        </div>
+                <h2>Ready to Join Our Marketplace!</h2>
+                <p>Over 25,000 designers and developers trust the MartPlace.</p>
+                <button>Join Us Today</button>
+            </div>
         </div>
     </section>
+    <footer class="footer__top">
+        <div class="container">
+            <div class="footer__inner">
+                <div class="footer__inner-item footer__main-item">
+                    <img src="img/Logo-footer.png" alt="">
+                    <p>Nunc placerat mi id nisi interdum they mollis. Praesent pharetra, justo ut scel erisque the
+                        mattis, leo quam.</p>
+                    <div class="telephone">
+                        <img src="img/phone-handset.png" alt="">
+                        <a href="tel:67898752235">Phone: +6789-875-2235</a>
+                    </div>
+                    <div class="mail">
+                        <img src="img/mail.png" alt="">
+                        <a href="">support@aazztech.com</a>
+                    </div>
+                    <div class="geo">
+                        <img src="img/map-marker.png" alt="">
+                        <a href="">202 New Hampshire Avenue
+                            Northwest #100, New York-2573</a>
+                    </div>
+                </div>
+                <div class="footer__inner-item">
+                    <h4>Our Company</h4>
+                    <a href="">About Us</a>
+                    <a href="">How It Work</a>
+                    <a href="">Affiliates</a>
+                    <a href="">Testimonials</a>
+                    <a href="">Contact Us</a>
+                    <a href="">Copyright Notice</a>
+                    <a href="">Blog</a>
+                </div>
+                <div class="footer__inner-item">
+                    <h4>Help Support</h4>
+                    <a href="">Support Forum</a>
+                    <a href="">Terms & Conditions</a>
+                    <a href="">Support Policy</a>
+                    <a href="">Refund Policy</a>
+                    <a href="">FAQs</a>
+                    <a href="">Buyers Faq</a>
+                    <a href="">Sellers Faq</a>
+                </div>
+                <div class="footer__inner-item footer-input-item">
+                    <h4>Newsletter</h4>
+                    <p>Subscribe to get the latest news, update and offer information. Don't worry, we won't send spam!
+                    </p>
+                    <div class="footer-input">
+                        <input type="text" placeholder="Enter email">
+                        <button>Submit</button>
+                    </div>
+                    <div class="socials">
+                        <a class="social-1" href=""> <img src="img/facebook.png" alt=""> </a>
+                        <a class="social-2" href=""> <img src="img/twitter.png" alt=""> </a>
+                        <a class="social-3" href=""> <img src="img/google.png" alt=""> </a>
+                        <a class="social-4" href=""> <img src="img/ques.png" alt=""> </a>
+                        <a class="social-5" href=""> <img src="img/in.png" alt=""> </a>
+                        <a class="social-6" href=""> <img src="img/web.png" alt=""> </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <footer class="footer__bot">
+        <div class="container">
+            <p>©2017 <span>MartPlace. </span>  All rights reserved. Created by <span> AazzTech </span> </p>
+        </div>
+    </footer>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
