--- a/app/index.html
+++ b/app/index.html
@@ -277,17 +277,17 @@
                 </div>
             </div>
             <div class="shop__tags">
-                <a href="">Plugins</a>
-                <a href="">WordPress</a>
-                <a href="">Site Template</a>
-                <a href="">PSD Template</a>
-                <a href="">Joomla</a>
-                <a href="">User Interface</a>
-                <a href="">Landing Page</a>
-                <a href="">Software</a>
+                <button type="button" data-filter="all">Plugins</button>
+                <button type="button" data-filter=".category-wordpress">WordPress</button>
+                <button type="button" data-filter=".category-site">Site Template</button>
+                <button type="button" data-filter=".category-psd">PSD Template</button>
+                <button type="button" data-filter=".category-joomla">Joomla</button>
+                <button type="button" data-filter=".category-int">User Interface</button>
+                <button type="button" data-filter=".category-land">Landing Page</button>
+                <button type="button" data-filter=".category-soft">Software</button>
             </div>
             <div class="shop__inner">
-                <div class="shop__inner-item">
+                <div class="shop__inner-item mix category-wordpress category-new" data-order='1'>
                     <div class="item__top-content">
                         <button>More Info</button>
                         <button>Live Demo</button>
@@ -325,7 +325,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="shop__inner-item">
+                <div class="shop__inner-item mix category-site">
                     <div class="item__top-content">
                         <button>More Info</button>
                         <button>Live Demo</button>
@@ -363,7 +363,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="shop__inner-item">
+                <div class="shop__inner-item mix category-psd">
                     <div class="item__top-content">
                         <button>More Info</button>
                         <button>Live Demo</button>
@@ -401,7 +401,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="shop__inner-item">
+                <div class="shop__inner-item mix category-joomla category-new">
                     <div class="item__top-content">
                         <button>More Info</button>
                         <button>Live Demo</button>
@@ -439,7 +439,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="shop__inner-item">
+                <div class="shop__inner-item mix category-int category-new">
                     <div class="item__top-content">
                         <button>More Info</button>
                         <button>Live Demo</button>
@@ -477,7 +477,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="shop__inner-item">
+                <div class="shop__inner-item mix category-site">
                     <div class="item__top-content">
                         <button>More Info</button>
                         <button>Live Demo</button>
@@ -519,7 +519,7 @@
 
             </div>
             <div class="shop__btn-new-products">
-                <a href="#">All New Products</a>
+                <button type="button" data-filter=".category-new" >All New Products</button>
             </div>
         </div>
     </section>
